HTML Skeleton done + Basic CSS

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p>Unwrap Voucher</p>
         </div>
         <div class="voucher voucher-front">
-            <!-- <img src="/img/diamond.png" alt=""> -->
+            <img src="/img/diamond.png" alt="">
             <p>$500</p>
             <p>For games, music, movies and Vairam Cloud</p>
         </div>
