All formatting CSS completed

--- a/index.html
+++ b/index.html
@@ -19,23 +19,24 @@
     </header>
 
     <div class="container">
-        <div class="voucher voucher-unwrap">
-            <p>Unwrap Voucher</p>
+        <div class="voucher-container">
+            <div class="voucher-unwrap">
+                <p>Unwrap Voucher</p>
+            </div>
+            <div class="voucher-front">
+                <img src="/img/diamond.png" alt="">
+                <p>$500</p>
+                <p>For games, music, movies and Vairam Cloud</p>
+            </div>
+            <div class="voucher-back">
+                <i class="fa-solid fa-gamepad"></i>
+                <i class="fa-solid fa-music"></i>
+                <i class="fa-solid fa-film"></i>
+                <i class="fa-solid fa-cloud"></i>
+                <p><span>Do not share your code.</span> Valid only for SG transactions. For assistance, call 8998 8881 &copy;Vairam Pte Ltd 2024</p>
+                <p>ABC1234567890</p>
+            </div>
         </div>
-        <div class="voucher voucher-front">
-            <img src="/img/diamond.png" alt="">
-            <p>$500</p>
-            <p>For games, music, movies and Vairam Cloud</p>
-        </div>
-        <div class="voucher voucher-back">
-            <i class="fa-solid fa-gamepad"></i>
-            <i class="fa-solid fa-music"></i>
-            <i class="fa-solid fa-film"></i>
-            <i class="fa-solid fa-cloud"></i>
-            <p><span>Do not share your code.</span> Valid only for SG transactions. For assistance, call +65 8998 8881 &copy;Vairam Pte Ltd 2024</p>
-            <p>ABC1234567890</p>
-        </div>
-
     </div>
     <script src="/js/app.js"></script>
 </body>
