Seperated voucher from unwrapper.

--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
     </header>
 
     <div class="container">
-        <div class="voucher-container">
+        <div class="unwrapper-container">
             <div class="voucher-unwrap">
                 <p>Unwrap Voucher</p>
             </div>
+        </div>
+        <div class="voucher-container">
             <div class="voucher-front">
                 <img src="/img/diamond.png" alt="">
                 <p>$500</p>
