Created JS to toggle CSS classes & added Media Query (Basic)

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <div class="container">
         <div class="unwrapper-container">
             <div class="voucher-unwrap">
-                <p>Unwrap Voucher</p>
+                <p>Unwrap</p>
             </div>
         </div>
-        <div class="voucher-container">
+        <div class="voucher-container unwrap">
             <div class="voucher-front">
                 <img src="/img/diamond.png" alt="">
                 <p>$500</p>
